View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026423 | Community | OCCT:Foundation Classes | public | 2015-07-13 16:36 | 2015-10-23 20:50 |
Reporter | BenjaminBihler | Assigned To | bugmaster | ||
Priority | normal | Severity | text | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026423: Complete documentation of CPnts_AbscissaPoint Adv/Perform methods | ||||
Description | The parameters U0 and Ui are not documented. Especially Ui is important (it has to be a first guess). It's meaning can be deduced from the constructor documentation. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26423 has been created by BenjaminBihler. SHA-1: f0adf7b882f766893ba7ca8a966ef5ca5f1d664e Detailed log of new commits: Author: Benjamin Bihler Date: Mon Jul 13 15:41:07 2015 +0200 Completed documentation of CPnts_AbscissaPoint Adv/Perform methods |
|
Generating project with WOK has been tested successfully by comitter |
|
Reviewed. No testing is needed. Just compilation, because the code was not changed. |
|
Dear BugMaster, Branch CR26423 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms. SHA-1: f0adf7b882f766893ba7ca8a966ef5ca5f1d664e Number of compiler warnings: occt component: Linux: 24 (24 on master) Windows: 0 (0 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) |
|
Branch CR26423 has been deleted by inv. SHA-1: f0adf7b882f766893ba7ca8a966ef5ca5f1d664e |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-13 16:36 | BenjaminBihler | New Issue | |
2015-07-13 16:36 | BenjaminBihler | Assigned To | => BenjaminBihler |
2015-07-13 16:41 | git | Note Added: 0042974 | |
2015-07-13 17:08 | BenjaminBihler | Note Added: 0042977 | |
2015-07-13 17:08 | BenjaminBihler | Assigned To | BenjaminBihler => |
2015-07-13 17:08 | BenjaminBihler | Status | new => resolved |
2015-07-13 17:08 | BenjaminBihler | Steps to Reproduce Updated | |
2015-07-13 17:12 | BenjaminBihler | Assigned To | => msv |
2015-07-15 09:30 | msv | Note Added: 0043024 | |
2015-07-15 09:30 | msv | Assigned To | msv => bugmaster |
2015-07-15 09:30 | msv | Status | resolved => reviewed |
2015-07-15 09:30 | msv | Product Version | => 6.9.0 |
2015-07-15 09:30 | msv | Target Version | 6.9.0 => 7.0.0 |
2015-07-15 15:50 |
|
Assigned To | bugmaster => apv |
2015-07-16 11:33 |
|
Note Added: 0043106 | |
2015-07-16 11:33 |
|
Assigned To | apv => bugmaster |
2015-07-16 11:33 |
|
Status | reviewed => tested |
2015-07-16 11:33 |
|
Test case number | => Not needed |
2015-07-23 11:55 | bugmaster | Changeset attached | => occt master e03bdee2 |
2015-07-23 11:55 | bugmaster | Status | tested => verified |
2015-07-23 11:55 | bugmaster | Resolution | open => fixed |
2015-08-14 10:56 | git | Note Added: 0044193 | |
2015-08-26 11:04 | abv | Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:50 |
|
Fixed in Version | => 6.9.1 |