0026423: Complete documentation of CPnts_AbscissaPoint Adv/Perform methods